syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "Error.proto";

message FindTransactionsByPersonIdAndTimeRequest {
  string person_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  string currency = 4;
  string iban = 5;
  int32 page = 6;
  int32 size = 7;
}

message FindTransactionsByPersonIdAndTimeResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Transaction transaction =1;
  }

  message Failure{
    string message = 100;
    oneof error {
      Error not_found = 1;
    }
  }
}

message FindTransactionsByPersonIdAndTimeListResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated FindTransactionsByPersonIdAndTimeResponse transaction = 1;
  }

  message Failure{
    string message = 100;
    oneof error {
      Error not_found = 1;
    }
  }
}

message Transaction {
  string id = 1;
  string person_id = 2;
  google.protobuf.Timestamp transaction_time = 3;

  enum Direction{
    INPUT = 0;
    OUTPUT = 1;
  }

  Direction direction = 4;
  double value = 5;
  string currency = 6;
  string iban = 7;

}
