syntax = "proto3";

package protobuf;

import "ProtoMessage.proto";

service TransactionsService{
  rpc getTransactions (TransactionRequestProto) returns (stream TransactionResponseProto);
}
